# openenv_meta_hackchallenge

./: .gitignore  Dockerfile  README.md  __init__.py  blob_inference.py  client.py  hf_test.py  inference.py  openenv.yaml  pyproject.toml  score_func.ipynb  task.json  test_cases.py  test_client.py  test_vectorizer.py  todo
.streamlit/: config.toml
Hospitality reception RL env/: Dockerfile  HF_README.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  streamlit_app.py  test_cases.py
Hospitality reception RL env/agent/: __init__.py  groq_agent.py
Hospitality reception RL env/server/: __init__.py  app.py  data.py  environment.py  requirements.txt  tools.py
Hospitality reception RL env/tasks/: __init__.py  easy.py  graders.py  hard.py  medium.py
agent/: groq_agent.py
graders/: easy_grader.py  hard_grader.py  medium_grader.py
hospital_triage/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
hospital_triage/server/: Dockerfile  __init__.py  app.py  (+1 more)
hospitalmanage_triage_env/: __init__.py  client.py  inference.py  models.py  pyproject.toml  task.json  test_client.py
openenv_hospitalmanage_triage_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  environment.py  graders.py  hospital.db  hospital.sql  hospital_db_test.py  hospitalmanage_triage_env_environment.py  symptoms.json  tools.py  utils.py
tasks/: easy.py  graders.py  hard.py  rebook.py
word_game/: .dockerignore  README.md
(+9 files in other folders)
